guide/.vuepress/styles/sidebar.scss
@import './mixins/scrollbar.scss';

:root {
	--active-sidebar-link: var(--theme-530);
	--active-sidebar-link-hover: var(--theme-500);
}

.sidebar {
	--c-bg-scrollbar: #ededed;

	top: 4rem;
	font-size: 14px;
	border-right-width: 0;
	transition: transform 0.2s ease;
	@include customScrollbar();

	@media (max-width: 719px) {
		top: 0;
		padding-top: 4rem;
	}

	.navbar-links {
		@media screen and (max-width: 719px) {
			padding: 0.5rem;
		}
	}

	& > .sidebar-links {
		padding: 0 0.5rem 1.25rem;

		@media screen and (max-width: 719px) {
			padding: 0 0.5rem 0.5rem;
		}

		.sidebar-heading {
			font-size: 1em;
			font-weight: 700;
			text-transform: uppercase;
		}

		.sidebar-item:not(.sidebar-heading) {
			border-radius: 2px 0 0 2px;

			&.active {
				color: var(--active-sidebar-link);
				border-left-width: 4px;
				border-left-color: var(--active-sidebar-link);
			}

			&:hover,
			&.active:hover {
				color: var(--active-sidebar-link-hover);
				border-left-color: var(--active-sidebar-link-hover);
			}
		}
	}
}

html.dark .sidebar {
	--c-bg-scrollbar: #171717;
}

